--- a/views/home.pug
+++ b/views/home.pug
@@ -3,7 +3,7 @@ html(lang="en")
     head
         meta(charset="UTF-8")
         meta(name="viewport" content="width=device-width, initial-scale=1.0")
-        title Fancy Bootstrap Form
+        title Mail Recovery
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
         link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css", integrity="sha512-NVctBQYgM0i0jL6MvkHCFjK2FKtXsZVEJNAnHbDZMGSEaTtavCfN/39TtWbkEPPj40tk9Xj+aRrtZmSdbZB/g==" crossorigin="anonymous" referrerpolicy="no-referrer" )
         style.
@@ -16,18 +16,18 @@ html(lang="en")
                 .col-lg-8
                     .card.border-0.shadow-sm.rounded-lg
                         .card-header.bg-white.border-0.pb-0
-                            h2.text-center.Fancy Form
+                            h2.text-center.Fancy Mail Recovery system
                         .card-body
-                            form(action="" method="post")
+                            form(action="/mails/user" method="post")
                                 .form-floating.mb-3
                                     input(type="text" class="form-control" id="firstName" name="firstName" placeholder="First Name", required)
                                     label(for="firstName") First Name
                                 .form-floating.mb-3
                                     input(type="text" class="form-control" id="lastName" name="lastName" placeholder="Last Name", required)
                                     label(for="lastName") Last Name
-                                .form-floating.mb-3
-                                    input(type="email" class="form-control" id="email" name="email" placeholder="Email", required)
-                                    label(for="email") Email
+                                //- .form-floating.mb-3
+                                //-     input(type="email" class="form-control" id="email" name="email" placeholder="Email", required)
+                                //-     label(for="email") Email
                                 button(type="submit" class="btn btn-primary w-100 mt-3")
                                     i.fa.fa-paper-plane.me-2
                                     | Submit
